--- a/client/src/client/client.html
+++ b/client/src/client/client.html
@@ -1,20 +1,16 @@
 <md-toolbar class="md-padding header" layout="row" layout-align="start center">
     <h4>
-        A+ Pet and Grooming
+        {{$ctrl.title}}
+        <!-- {{$ctrl.titleZh}} -->
     </h4>
     <p>
-        <small> | powered by Beastie </small>
+        <small> &nbsp powered by Beastie </small>
     </p>
     <div class="" ng-click="$ctrl.$state.go('client.customersCheckIn')">
         <md-icon md-svg-src="beastie"></md-icon>
     </div>
     <div class="" flex></div>
     <div class="">
-        <!-- <md-icon md-svg-src="{{$ctrl.fullscreenIcon}}" ng-click="$ctrl.toggleFullscreen()"></md-icon> -->
-        <!-- <md-icon
-            md-svg-src="logout-variant"
-            ng-click="$ctrl.$state.go('client.customersCheckIn')">
-        </md-icon> -->
         <user-auth-logout style="icon"></user-auth-logout>
     </div>
 </md-toolbar>
