--- a/client/src/client/customersForm/customersForm.html
+++ b/client/src/client/customersForm/customersForm.html
@@ -17,7 +17,7 @@
 <md-content layout="column" flex class="content">
     <form name="$ctrl.customers_form" novalidate flex ng-hide="$ctrl.currentFormState=='review'">
         <section ng-show="$ctrl.currentFormState=='name'">
-            <div layout="column" flex>
+            <div layout="column" flex style="-webkit-overflow-scrolling: auto;">
                 <h2 class="md-headline">
                     Let's start with your information
                 </h2>
@@ -37,7 +37,7 @@
         </section>
 
         <section ng-show="$ctrl.currentFormState=='address'">
-            <div layout="column" flex>
+            <div layout="column" flex style="-webkit-overflow-scrolling: auto;">
                 <h2 class="md-headline">And your address</h2>
                 <md-input-container class="md-subhead">
                     <label>Address</label>
